--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-CHANNEL=miantiao_me
+CHANNEL=cjzdaily
 
 LOCALE=zh-cn
 TIMEZONE=Asia/Shanghai
 
-TELEGRAM=ccbikai
-TWITTER=ccbikai
-GITHUB=ccbikai
+TELEGRAM=pi
+TWITTER=pillar
+GITHUB=pillar
 DISCORD=https://DISCORD.com
 PODCASRT=https://PODCASRT.com
 MASTODON=mastodon.social/@Mastodon
